Added login route

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,3 +54,7 @@ table {
   background-color: #f3eeee;
   color: #1d4d4f;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
