--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-  <button>Continue with Google</button>
+  <h1>Sign in</h1>
+  <button class="sign-in" (click)="signInWithGoogle()"> </button>
 </div>
