Added login logic and navigation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,9 +4,9 @@
   </div>
   <div class="navigation-links">
     <ul class="navigation-links">
-      <li><a href="">Profile</a></li>
+      <li><a href="/login">Profile</a></li>
       <li><a href="">History</a></li>
-      <li><a href="">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="">Logout</a></li>
     </ul>
   </div>
