--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -2,10 +2,21 @@
   position: relative;
   top: 20vh;
   margin: auto;
-  width: 200px;
-  height: 200px;
+  width: 40vh;
+  height: 400px;
   box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 20px;
+  overflow: hidden;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+form{
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-evenly;
+  height: 300px;
 }
 h1{
   font-size: 45px;
@@ -13,6 +24,7 @@ h1{
   text-align: center;
 }
 .sign-in{
+  border: none;
   width: 200px;
   height: 50px;
   background-size: cover;
@@ -20,4 +32,24 @@ h1{
   background-position: center center;
   background-image: url('../../assets/signin-assets/google_signin_buttons/web/2x/btn_google_signin_light_normal_web@2x.png');
 }
-
+.sign-in:active{
+  background-image: url('../../assets/signin-assets/google_signin_buttons/web/2x/btn_google_signin_light_pressed_web@2x.png');
+}
+.signin-divisor{
+  align-self: center;
+}
+.form-group{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+input{
+  font-size: 20px;
+  background-color: white;
+  position: relative;
+  margin: 10px;
+}
+button{
+  align-self: center;
+  font-size: 20px;
+}
