Break main task list in components

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,6 +28,7 @@
     <header>
       <h1>Your progress</h1>
     </header>
+    <app-main-task-list></app-main-task-list>
     <div class="progress-card">
       <div class="task-title">Read Clean Code</div>
       <div class="progress-indicator">
