Created presentantion components and add to template

--- a/src/app/home/main-task-list/main-task-list.component.html
+++ b/src/app/home/main-task-list/main-task-list.component.html
@@ -1,4 +1,12 @@
-<app-task-card></app-task-card>
+<ng-container *ngFor="let task of tasks">
+  <app-task-card
+  [taskTitle]="task.taskTitle"
+  [progress]="task.progress"
+  [taskDescription]="task.taskDescription"
+  [taskDetails]="task.taskDetails"
+></app-task-card>
+</ng-container>
+
 <div class="progress-card">
   <div class="task-title">Read Clean Code</div>
   <div class="progress-indicator">
