Organized components hierarchy, add state manager to task and edit task popup

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -137,3 +137,11 @@ aside{
   font-size: 40px;
   border: none;
 }
+.edit-task-form{
+  position: absolute;
+  width: 100vw;
+  height: 90vh;
+  backdrop-filter: blur(3px);
+  background: none;
+
+}
