--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
   </div>
 </header>
 
-<div id="main-container">
+<div id="main-container" [ngStyle]="{'background-color':showEditForm? 'green' : 'red' + '!important'}">
   <aside>
     <h1>Other tasks</h1>
     <ul>
@@ -29,80 +29,6 @@
       <h1>Your progress</h1>
     </header>
     <app-main-task-list></app-main-task-list>
-    <div class="progress-card">
-      <div class="task-title">Read Clean Code</div>
-      <div class="progress-indicator">
-        <progress max="100" value="10"></progress>
-        10/100
-      </div>
-      <details>
-        <summary class="task-description">
-          Read Clean Code and resume
-          main ideas from that
-        </summary>
-        <div class="task-details">
-            <ol>
-              <li><input type="checkbox" name="" id="">Read Book </li>
-              <li><input type="checkbox" name="" id="">Make resume </li>
-            </ol>
-          <button class="delete">Delete</button>
-          <button>Edit</button>
-        </div>
-      </details>
-    </div>
-    <div class="progress-card">
-      <div class="task-title">Learn Haskell</div>
-      <div class="progress-indicator">
-        <progress max="100" value="10"></progress>
-        10/100
-      </div>
-      <div class="task-description">
-        Read Haskell docs and build E-Commerce app for
-        apply learned concepts
-      </div>
-    </div>
-    <div class="progress-card">
-      <div class="task-title">Build back-end of blog engine</div>
-      <div class="progress-indicator">
-        <progress max="100" value="30"></progress>
-        30/100
-      </div>
-      <div class="task-description">
-        Write back-end code of blog engine using NestJS and React
-      </div>
-    </div>
-    <div class="progress-card">
-      <div class="task-title">Watch Tower of God</div>
-      <div class="progress-indicator">
-        <progress max="12" value="4"></progress>
-        4/12
-      </div>
-      <div class="task-description">
-        Watch anime Tower of God in Giganima
-      </div>
-    </div>
-
-    <div class="progress-card">
-      <div class="task-title">Watch Tower of God</div>
-      <div class="progress-indicator">
-        <progress max="12" value="4"></progress>
-        4/12
-      </div>
-      <div class="task-description">
-        Watch anime Tower of God in Giganima
-      </div>
-    </div>
-
-    <div class="progress-card">
-      <div class="task-title">Watch Tower of God</div>
-      <div class="progress-indicator">
-        <progress max="12" value="4"></progress>
-        4/12
-      </div>
-      <div class="task-description">
-        Watch anime Tower of God in Giganima
-      </div>
-    </div>
   </main>
   <aside>
     <h1>Completed Tasks</h1>
@@ -112,6 +38,9 @@
       <li>Learn Java basic</li>
     </ul>
   </aside>
+  <div *ngIf="showEditForm" class="edit-task-form">
+    <app-edit-task-form (closeFormEvent)="closeEditForm()"></app-edit-task-form>
+  </div>
   <div class="new-task">
     <button>New Task</button>
   </div>
