--- a/src/app/home/main-task-list/task-card/task-card.component.html
+++ b/src/app/home/main-task-list/task-card/task-card.component.html
@@ -1,19 +1,19 @@
 <div class="progress-card">
-  <div class="task-title">{{taskTitle}}</div>
+  <div class="task-title">{{task.taskTitle}}</div>
   <div class="progress-indicator">
-    <progress [max]="progress[1]" [value]="progress[0]"></progress>
-    {{progress[0]}}/{{progress[1]}}
+    <progress [max]="task.progress[1]" [value]="task.progress[0]"></progress>
+    {{task.progress[0]}}/{{task.progress[1]}}
   </div>
   <details>
     <summary class="task-description">
-      {{taskDescription}}
+      {{task.taskDescription}}
     </summary>
     <div class="task-details">
         <ol>
-          <li *ngFor="let taskDetail of taskDetails" ><input type="checkbox" name="" id="">{{taskDetail}}</li>
+          <li *ngFor="let taskDetail of task.taskDetails" ><input type="checkbox" name="" id="">{{taskDetail}}</li>
         </ol>
-      <button class="delete">Delete</button>
-      <button>Edit</button>
+      <button class="delete" (click)="deleteTask(task.id)">Delete</button>
+      <button (click)="openForm(task)">Edit</button>
     </div>
   </details>
 </div>
