--- a/src/app/home/task-form/task-form.component.html
+++ b/src/app/home/task-form/task-form.component.html
@@ -20,6 +20,6 @@
       </ng-container>
     </label>
   <button class="close-button" (click)="closeForm()">Close</button>
-  <button id="update-button" (click)="update()">Update</button>
+  <button id="update-button" (click)="emitData()">Ok</button>
   </div>
 </div>
