--- a/src/app/home/main-task-list/task-card/task-card.component.html
+++ b/src/app/home/main-task-list/task-card/task-card.component.html
@@ -10,7 +10,10 @@
     </summary>
     <div class="task-details">
         <ol>
-          <li *ngFor="let taskDetail of task.taskDetails" ><input type="checkbox" [checked]="taskDetail.completed" (change)="checkSubtask($event, taskDetail.id, task)" name="" id="">{{taskDetail.name}}</li>
+          <li *ngFor="let taskDetail of task.taskDetails" >
+            <input type="checkbox" [checked]="taskDetail.completed" (change)="checkSubtask($event, taskDetail.id, task)" name="" id="">
+            {{taskDetail.name}}
+          </li>
         </ol>
       <button class="delete" (click)="deleteTask(task.id)">Delete</button>
       <button (click)="openForm(task)">Edit</button>
