--- a/src/app/home/main-task-list/task-card/task-card.component.scss
+++ b/src/app/home/main-task-list/task-card/task-card.component.scss
@@ -1,26 +1,32 @@
-.progress-card{
+.progress-card {
   font-size: 25px;
   margin-top: 20px;
   padding: 10px;
-  font-family: 'Roboto Slab',serif;
+  font-family: 'Roboto Slab', serif;
 
 }
-.task-title{
+
+.task-title {
   font-size: 40px;
   font-weight: 400;
 }
-.task-description{
+
+.task-description {
   font-weight: 100;
 }
-.progress-indicator{
+
+.progress-indicator {
   padding: 5px;
 }
-.task-details{
+
+.task-details {
   margin: 10px;
-  li{
+
+  li {
     padding: 10px;
   }
-  button{
+
+  button {
     padding: 10px;
     margin: 10px;
     width: 75px;
@@ -29,46 +35,59 @@
     font-size: 20px;
     transition: ease-in-out 0.3s;
   }
-  button:hover{
+
+  button:hover {
     cursor: pointer;
-    background-color:darken($color: #f3eeee, $amount: 15) ;
+    background-color: darken($color: #f3eeee, $amount: 15);
 
   }
-  button.delete{
+
+  button.delete {
     color: rgb(59, 18, 18);
   }
-  input[type=checkbox]{
+
+  input[type=checkbox] {
     width: 20px;
     height: 20px;
   }
 }
-progress[value]{
+
+progress[value] {
   height: 10px;
   margin: 10px;
 
   animation: animate-progress 2s ease-in-out;
 }
 
-@keyframes animate-progress{
-  0%{
+@keyframes animate-progress {
+  0% {
     width: 0;
   }
-  100%{
+  100% {
     color: red;
   }
 }
+
 details[open] summary ~ * {
   animation: sweep .7s ease-out;
 }
+
 @keyframes sweep {
-  0%    {opacity: 0; margin-right: -10px;}
-  100%  {opacity: 1; margin-right: 0px}
+  0% {
+    opacity: 0;
+    margin-right: -10px;
+  }
+  100% {
+    opacity: 1;
+    margin-right: 0px
+  }
 }
-.edit-form{
+
+.edit-form {
   position: absolute;
   top: 0;
 
-  input[type=text]{
+  input[type=text] {
     border: 1px black solid;
   }
 }
