--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <h1>Sign in</h1>
-  <button class="sign-in" (click)="signInWithGoogle()"></button>
+  <button (click)="signInWithGoogle()" class="sign-in"></button>
 </div>
 
