--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,11 +11,11 @@
     </ul>
   </div>
   <div class="search-input">
-    <input type="text" name="" id="" placeholder="Search Task...">
+    <input id="" name="" placeholder="Search Task..." type="text">
   </div>
 </header>
 
-<div id="main-container" [ngStyle]="{'background-color':showEditForm? 'green' : 'red' + '!important'}">
+<div [ngStyle]="{'background-color':showEditForm? 'green' : 'red' + '!important'}" id="main-container">
   <aside>
     <h1>Other tasks</h1>
     <ul>
@@ -42,10 +42,10 @@
     <app-task-form (closeFormEvent)="closeEditForm()" (emitDataEvent)="updateTask($event)"></app-task-form>
   </div>
   <div class="new-task">
-    <button (click)="openNewTaskForm()" >New Task</button>
+    <button (click)="openNewTaskForm()">New Task</button>
   </div>
   <div *ngIf="showNewTaskForm" class="edit-task-form">
-  <app-task-form (closeFormEvent)="closeNewTaskForm()" (emitDataEvent)="newTask($event)"></app-task-form>
+    <app-task-form (closeFormEvent)="closeNewTaskForm()" (emitDataEvent)="newTask($event)"></app-task-form>
   </div>
   <footer>
 
